added updates to the resume page, made a few fonts smaller, and overall provided better readability

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -9,3 +9,13 @@
 #main .post .float_link_right{
     float: right;
 }
+
+/* targetting github repo link buttons */
+#main .post .box ul li a{
+    color: rgb(23, 191, 239)!important;
+    /* font-size: 8px; */
+}
+
+#main .post .box ul li{
+    font-size: small;
+}
