hotfix, images missing for askit... also attempting fix for blogs and contact views

--- a/views/project.html
+++ b/views/project.html
@@ -130,7 +130,7 @@
 								<a rel="noopener noreferrer" target="_blank" class="project-git-links-front-end button small" href="https://github.com/alanbanks229/Mod_2_Project">Github</a>
 							</li>
 						</ul>
-						<a href="#" class="image fit"><img src="images/mod2_pic_in_action.png" alt="" /></a>
+						<a href="#" class="image fit"><img src="../images/mod2_pic_in_action.png" alt="" /></a>
 						<p>An online forum where you can post any kind of question under specific categories and receive responses from other users who use this app!
 							<br/>
 							Users can also add additional categories with validations from admins.
