--- a/views/contact.html
+++ b/views/contact.html
@@ -34,7 +34,7 @@
 							<li><a href="index.html">About</a></li>
 							<li><a href="resume.html">Resumé</a></li>
 							<li><a href="project.html">Projects</a></li>
-							<li><a href="blog.html">Blogs</a></li>
+							<li><a href="blogs.html">Blogs</a></li>
 							<li class="active"><a href="contact.html">Contact</a></li>
 						</ul>
 						<ul class="icons">
