--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
 							<li class="active"><a href="index.html">About</a></li>
 							<li><a href="resume.html">Resumé</a></li>
 							<li><a href="project.html">Projects</a></li>
-							<li><a href="blog.html">Blogs</a></li>
+							<li><a href="blogs.html">Blogs</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 						<ul class="icons">
