--- a/views/project.html
+++ b/views/project.html
@@ -44,11 +44,11 @@
 				<!-- Nav -->
 				<nav id="nav">
 					<ul class="links">
-						<li><a href="index.html">About</a></li>
-						<li><a href="resume.html">Resumé</a></li>
-						<li class="active"><a href="project.html">Projects</a></li>
-						<li><a href="blog.html">Blogs</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="./index.html">About</a></li>
+						<li><a href="./resume.html">Resumé</a></li>
+						<li class="active"><a href="./project.html">Projects</a></li>
+						<li><a href="./blogs.html">Blogs</a></li>
+						<li><a href="./contact.html">Contact</a></li>
 					</ul>
 					<ul class="icons">
 						<li><a target="_blank" href="https://github.com/alanbanks229" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
