hotfix #5... fixed path to retrieve PDF for resume... lol

--- a/views/resume.html
+++ b/views/resume.html
@@ -44,7 +44,7 @@
 				<div id="main">
 
 					<section class="post">
-						<a href="images/Alan_Banks_Resume_2021.pdf" target="_blank" class="float_link_right button small" download>
+						<a href="../images/Alan_Banks_Resume_2021.pdf" target="_blank" class="float_link_right button small" download>
 							Download PDF here
 						</a>
 						<header>
