Fixed the PDF file path

--- a/views/resume.html
+++ b/views/resume.html
@@ -44,8 +44,12 @@
 				<div id="main">
 
 					<section class="post">
-						<a href="../images/Alan_Banks_Resume_2021.pdf" target="_blank" class="float_link_right button small" download>
-							Download PDF here
+						<!-- For some reason I cannot use ../images/Alan_Banks_Resume_2021
+							Github pages is seeing it as ../views/images/Alan_Banks_Resume_2021.pdf
+							so for now resorting to what is on github... also removed target="_blank"
+						 -->
+						<a href="https://alanbanks229.github.io/images/Alan_Banks_Resume_2021.pdf" class="float_link_right button small" download>
+							Download PDF Here
 						</a>
 						<header>
 							<h2>Resumé</h2>
