--- a/views/contact.html
+++ b/views/contact.html
@@ -76,19 +76,19 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(301) 661-0363</a></p>
+								<p>(301)-661-4120</p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">alanbanks229@gmail.com</a></p>
+								<p>alanbanks229@gmail.com</p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a target="_blank" href="https://twitter.com/TheAlanBanks" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a target="_blank" href="https://www.facebook.com/alan.banks.37" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a target="_blank" href="https://www.instagram.com/alan_got_banks/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a target="_blank" href="https://github.com/alanbanks229" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
