--- a/views/index.html
+++ b/views/index.html
@@ -21,13 +21,13 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
-				<!-- Intro -->
+				<!-- Intro
 					<div id="intro">
 						<img class="profile-top-page" src="../images/portrait_cover.jpg">
 						<div class="top-profile-down-logo-div">
 							<a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a>
 						</div>
-					</div>
+					</div> -->
 
 				<!-- Header -->
 					<header id="header">
@@ -55,22 +55,18 @@
 				<div id="main">
 
 					<section class="post">
-						<header class="major">
-							<div class="image main">
-								<ul class="inline-block">
-									<li><img src="../images/missions_1.jpg" alt="" /></li>
-									<li><img src="../images/majestic.jpg" alt="" /></li>
-									<li><img class="make_imgbigger" src="../images/singing.jpg" alt="" width="800" height="400"/></li>
-								</ul>
-							</div>
-						</header>
 						<header>
-							<h3>🎵 Musician turned Software Engineer 💻</h3>
+							<h2 style="text-align: center;">🎵 Musician turned Software Engineer 💻</h2>
 						</header>
-						<p>From a young age, I enjoyed singing, playing piano, and using technology to create interesting sounds with MIDI. While studying and creating music compositions in undergrad, there were numerous times I would look at a completed score and say "it's not done." I kept going deeper to find the details that contribute to the theme I was looking for in my pieces.</p>
-						<p>Having transitioned to code, the same mindset of finessing and perfecting doesn't stop. "Just because the code produces the right answer, it doesn't mean that it is optimal or efficient."</p>
-						<p>As an upcoming full-stack engineer my goal is to create engaging digital experiences. I am currently seeking a position where I can leverage my background in music, sports, and of course software-engineering to achieve impactful goals.</p>
-						<p>Check out my projects & blogs to see what I have been up to lately! :)</p>
+						<p style="width: 100%;">
+							From a young age, I enjoyed singing, playing piano, and using technology to create interesting sounds with MIDI.
+							As a software engineer I enjoy having the skills to be a part of our rapidly changing world.
+							It’s a career that has given me the opportunity to be creative in my design while creating real life application tools we can use every day.
+						</p>
+						<div class="about_images_container">
+								<img class="resize_img_inline" src="../images/missions_1.jpg" alt="" style="margin-right: 6%;"/>
+								<img class="resize_img_inline" src="../images/singing.jpg" alt=""/>
+						</div>
 					</section>
 	
 			</div>
