--- a/views/resume.html
+++ b/views/resume.html
@@ -44,165 +44,13 @@
 				<div id="main">
 
 					<section class="post">
-						<!-- For some reason I cannot use ../images/Alan_Banks_Resume_2021
-							Github pages is seeing it as ../views/images/Alan_Banks_Resume_2021.pdf
-							so for now resorting to what is on github... also removed target="_blank"
-						 -->
-						<a href="https://alanbanks229.github.io/images/Alan_Banks_Resume_2021.pdf" class="float_link_right button small" download>
-							Download PDF Here
-						</a>
 						<header>
-							<h2>Resumé</h2>
+							<h2 class="resume_heading">Resumé</h2>
 						</header>
-						<div style="border: 2px solid black" class="box">
-							<header class="resume_heading">
-								<h2>TECHNICAL SKILLS</h2>
-							</header>
-							<div style="border-color: rgb(149, 149, 149); padding: 0.5rem;" class="box">
-								<div class="technical_skill_row">
-									<b class="technical_skills_type">Programming:</b><p class="technical_skills_p">Ruby, JavaScript, Java, Python, C++, SQL</p>
-								</div>
-								<div class="technical_skill_row">
-									<b class="technical_skills_type">Web Technologies:</b><p class="technical_skills_p">Rails, React, AngularJS, Node.js, Flask, HTTP, REST, HTML, CSS, JSON</p>
-								</div>
-								<div class="technical_skill_row">
-									<b class="technical_skills_type">Databases:</b><p class="technical_skills_p">PostgreSQL, NoSQL(MongoDB), SQLite, MySQL</p>
-								</div>
-								<div class="technical_skill_row">
-									<b class="technical_skills_type">Relevant Courses:</b><p class="technical_skills_p">Object-Oriented and Concurrent Programming,<br/>Data Structures,<br/>Building Web Applications,<br/>Operating Systems.</p>
-								</div>
-<!-- 
-								<p><b class="technical_skills_type">Databases:</b >PostgreSQL, NoSQL(MongoDB), SQLite, MySQL</p>
-								<p><b class="technical_skills_type">Relevant Courses:</b> Object-Oriented and Concurrent Programming, Data Structures, Building Web Applications, Operating Systems.</p>
-								<p class="technical_skills_p" style="display: inline-flex; font-size: small;">
-									• ​ MERN Stack ​•​ Javascript(ES6) ​•​​ Java ​• ​​Python3 ​• ​​Flask ​• ​​Ruby ​•​​ Rails ​• ​​Linux ​• ​GIT ​•​​ CSS3/HTML5 ​• ​​Bootstrap ​• ​API Development/Consumption ​•​​ JSON ​• ​​PostgreSQL ​•​​ NoSQL (​MongoDB) ​​• ​SQlite • MySQL ​•
-								</p> -->
-							</div>
-							<hr/>
-							<header class="resume_heading">
-								<h2>Experience</h2>
-							</header>
-							<div style="border-color: rgb(149, 149, 149)" class="box">
-								<div class="company_heading_container_experience">
-									<p><strong>Global Impact</strong>  <em>(Alexandria, Virginia)</em></p>
-									<p class="align_history_right">August 2020 - December 2020</p>
-								</div>
-								<p class="remove_p_bottom_padding"><b>Software Application Developer</b></p>
-								<ul>
-									<li>Worked alongside numerous developers to manage and re-architect Global Impact's apps.</li>
-									<li>Developed behavioral tests and documentation for pre-existing and new features added within apps</li>
-									<li>Debugged numerous issues within code-base and optimized queries involving large amounts of data, allowing faster load times client-side.</li>
-									
-									<li>Implemented security improvements for Global Impact's user-base:</li>
-										<ul class="remove_p_bottom_padding">
-											<li style="list-style-type: circle;">
-												<p class="remove_p_bottom_padding">Added session timeouts and 2FA using TWilio Verify API and Ruby DEVISE</p>
-											</li>
-										</ul>
-									<li>Created internal tools within Global Impact's online portal application including:</li>
-										<ul>
-											<li style="list-style-type: circle;">
-												<p class="remove_p_bottom_padding"><b>Custom Mailer: </b>Overrides default emails that get sent out to Global Impact's partners. More user-friendly and easier to adjust email templates.</p>
-											</li>
-											<li style="list-style-type: circle;">
-												<p class="remove_p_bottom_padding"><b>App Date Filter: </b>Enabled the ability to filter applications submitted to Global Impact based upon numerous attributes, greatly increasing speed of identifying/locating pending applications.</p>
-											</li>
-										</ul>
-								</ul>
-							</div>
-							<div style="border-color: rgb(149, 149, 149)" class="box">
-								<div class="company_heading_container_experience">
-									<p><strong>Flatiron School</strong>  <em>(Washington, D.C.)</em></p>
-									<p class="align_history_right">January 2020 - June 2020</p>
-								</div>
-								<p class="remove_p_bottom_padding"><b>Software Engineer</b></p>
-								<ul>
-									<li>Full Stack Web Development, Ruby on Rails and Javascript Programming.</li>
-								</ul>
-							</div>
-							<hr/>
-							<header class="resume_heading">
-								<h2>TECHNICAL PROJECTS</h2>
-							</header>
-							<div style="border-color: rgb(149, 149, 149)" class="box">
-								<h2 style="font-size: 20px;">Current Trends</h2>
-								<ul class="actions small">
-									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://github.com/alanbanks229/current_trends_app_frontend"> Github Frontend</a></li>
-									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://github.com/alanbanks229/current_trends_app_backend"> Github Backend</a></li>
-									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/watch?time_continue=1&v=N-hRG1RldIY&feature=emb_logo"> Demo</a></li>
-								</ul>
-		
-								<p class="technical_skills_p">
-									<b>"An online web search engine made for accessing news locally and across the globe."</b>
-								</p>
-								<ul>
-									<li>Utilizes NEWSAPI and Microsoft Azure’s Bing News Search API to retrieve local/global news.</li>
-									<li>Utilizes OpenWeatherMap’s Weather API and Geolocation API to display local weather information.</li>
-									<li>Constructed with RESTful routing in the backend and utilized React-Router for intuitive URLs</li>
-									<li>User information is stored and encrypted within a PostgreSQL database using Ruby’s “bcrypt” gem. <br/> This adds an additional security measure to prevent people with access to the database to obtain private user information.</li>
-								</ul>
-							</div>
-							<div style="border-color: rgb(149, 149, 149)" class="box">
-								<h2 style="font-size: 20px;">Draw Off</h2>
-								<ul class="actions small">
-									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://github.com/IdleScV/mod4_frontend"> Github Frontend</a></li>
-									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://github.com/alanbanks229/mod4_backend"> Github Backend</a></li>
-									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://draw-off-app.herokuapp.com/"> Live Site</a></li>
-									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/watch?v=4vn4oCgs-wc&feature=youtu.be"> Demo Video</a></li>
-								</ul>
-								<p class="technical_skills_p">
-									<b>"An online multiplayer drawing game where the winner is determined by having the most likes."</b>
-								</p>
-								<ul>
-									<li>Consists of servers (game lobbies) that allow asynchronous communication, enabling multiple users to interact in a multiplayer setting. </li>
-									<li>Implemented an authentication flow via FireBase Auth, which checks for auth changes client-side.</li>
-									<li>Implemented custom React Component, “react-canvas-draw” which allows for the drawing capabilities displayed within the app.</li>
-								</ul>
-							</div>
-							<div style="border-color: rgb(149, 149, 149)" class="box">
-								<h2 style="font-size: 20px;">Askit</h2>
-								<ul class="actions small">
-									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://github.com/alanbanks229/Mod_2_Project">Github</a></li>
-								</ul>
-								<p class="technical_skills_p">
-									<b>"An online forum for asking and answering questions posted by multiple users."</b>
-								</p>
-								<ul>
-									<li>Rails application constructed with a MVC framework. (Models, Views, Controller)</li>
-									<li>Utilized the ActiveRecord module to construct numerous associations between objects/classes and set up SQlite database. </li>
-									<li>Views are implemented with ERb syntax making the HTML pages more dynamic.</li>
-								</ul>
-							</div>
-							<hr/>
-							<header class="resume_heading">
-								<h2>Education</h2>
-							</header>
-							<div style="border-color: rgb(149, 149, 149)" class="box">
-								<p><strong>University of Maryland Global Campus (UMGC)</strong> 	College Park MD</p>
-								<ul>
-									<li>BS in Computer Science  	expected graduation: Dec 2021</li>
-								</ul>
-							</div>
-							<div style="border-color: rgb(149, 149, 149)" class="box">
-								<p> <strong>Bowdoin College 	</strong>Brunswick, ME</p>
-								<ul>
-									<li>BA in Music  	05 / 2018</li>
-								</ul>
-							</div>
-							<header class="resume_heading">
-								<h2>Hobbies/Achievements</h2>
-							</header>
-							<div style="border-color: rgb(149, 149, 149)" class="box">
-								<ul>
-									<li>Maryland State Track & Field Champion (2014)</li>
-									<li>Musician</li>
-									<li>Vocalist</li>
-									<li>Runner</li>
-									<li>Video Gamer</li>
-									<li>Youth Coach & Mentor</li>
-								</ul>
-							</div>
-						</div>
+						<a href="../images/Alan_Banks_Resume.pdf" class="resume_heading button small" download>Download PDF Here</a>
+						<!-- <a href="https://alanbanks229.github.io/images/Alan_Banks_Resume_2021.pdf" class="resume_heading button small" download>
+							Download PDF Here
+						</a> -->
 					</section>
 		
 				</div>
